--- a/CSS/index.css
+++ b/CSS/index.css
@@ -30,7 +30,7 @@ main{
     height: 50vh;
     margin: 0 0 0 0;
     padding: 0 1%;
-    width: 40%;
+    width: 85%;
     position: absolute;
     z-index: 2;
     justify-content: center;
@@ -46,7 +46,7 @@ main{
     margin: 10vh 0 0 0;
 }
 #Bottomnav{
-    scroll-snap-align: start;
+    scroll-snap-align: end;
     flex-direction: row;
 }
 
