--- a/CSS/style.css
+++ b/CSS/style.css
@@ -98,13 +98,16 @@ input[type=button]{
 }    
 
 /* Main */
-
+main a{
+    display: contents;
+    text-decoration: none;
+    color: white;
+}
+main a:hover{
+    color: gray;
+}
 /* Bottom nav using grid */
-/* .grid:nth-child(odd){
-    background-color: brown;
-} */
 .grid{
-    /* border: 1px orangered solid; */
     background-color: rgb(116, 105, 105);
     align-items: center;
     justify-items: center;
@@ -115,8 +118,6 @@ input[type=button]{
 #Bottomnav{
     width: 100%;
     height: 180px;
-    /* border-top: blue 1px solid; */
-    /* background-color: gray; */
     display: grid;
     grid-template-columns: repeat(6,1fr);
     grid-template-rows: repeat(6,1fr);
@@ -129,6 +130,13 @@ input[type=button]{
     " f f f f d e "
     " f f f f g h "
     " f f f f g h ";
+}
+#Bottomnav a{
+    text-decoration: none;
+    color: black;
+}
+#Bottomnav a:hover{
+    color: white;
 }
 .item1{
     grid-area: a;
