--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,14 @@
     margin: 0;
     padding: 0;
 }
+@font-face {
+    font-family: "CustomFontRegular";
+    src: url(../Fonts/Source_Code_Pro/SourceCodePro-Regular.ttf);
+}
+@font-face {
+    font-family: "CustomFontMedium";
+    src: url(../Fonts/Source_Code_Pro/SourceCodePro-Medium.ttf);
+}
 body{
     font: 20px Arial black, Helvetica, sans-serif;
     display: flex;
@@ -37,17 +45,15 @@ body{
     justify-content: center;
     align-items: center;
 }
-#Middle a, .Dropbtn{
+#Middle a{
     padding: 28.5px 20px;
 }
-#Middle a:hover, .Dropdown:hover .Dropbtn{
+#Middle a:hover{
     color: white;
 }
 .Dropdown:hover .Dropdown-content{
     display: flex;
-}
-button:hover{
-    cursor: pointer;
+    opacity: 0.95;
 }
 .Dropdown-content{
     display: none;
@@ -60,17 +66,6 @@ button:hover{
 .Dropdown-content a{
     padding: 0 40px;
     background-color: rgb(116, 105, 105);
-}
-.Dropbtn{
-    font-size: 20px;
-    display: flex;
-    flex-wrap: nowrap;
-}
-.Dropbtn{
-    border: none;
-    outline: none;
-    background-color: inherit;
-    font-family: inherit;
 }
 /* Right */
 #Right{
@@ -98,13 +93,19 @@ input[type=button]{
 }    
 
 /* Main */
-main a{
-    display: contents;
-    text-decoration: none;
-    color: white;
+main{
+    display: flex;
+    width: 55%;
+    order: 2;
+    align-self: center;
+    flex-direction: column; 
 }
-main a:hover{
-    color: gray;
+/* section h1{
+    display: block;
+} */
+section{
+    display: flex;
+    width: 100%;
 }
 /* Bottom nav using grid */
 .grid{
